<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.beladsoft.phone_background.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.beladsoft.phone_background.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_downloaded"
        android:name="com.beladsoft.phone_background.ui.downloaded.DownloadedFragment"
        android:label="@string/nav_downloaded_images"
        tools:layout="@layout/fragment_downloaded" >
    </fragment>
</navigation>