<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".VIEW.ACTIVITIES.WallpaperShowActivity">

    <TextView
        android:id="@+id/tvMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/it_s_seconds_to_load_image" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:src="@drawable/ic_arrow_forward_24" />

    <LinearLayout
        android:id="@+id/llPB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llActions"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:gravity="center_vertical">

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

        <ProgressBar
            android:id="@+id/pbDownloading"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="20"
            android:visibility="visible" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ll_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_favorite_border"
            android:drawablePadding="8dp"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:shadowColor="@color/accent"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="0"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSetWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/tvFav"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_baseline_wallpaper_24"
            android:drawablePadding="8dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:padding="8dp"
            android:shadowColor="@color/accent"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/setWallpaper"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_download_white"
            android:drawablePadding="8dp"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:shadowColor="@color/accent"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>